# CrashlessLLM

./: .gitignore  AGENTS.md  ARCHITECTURE-DEVIATIONS.md  Architectural Design and Implementation of the CrashlessLLM Managed Boundary Layer.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CrashlessLLM.cs  CrashlessLLM.sln  LICENSE  README.md  SECURITY.md  System Architecture and Foundational Implementation of the CrashlessLLM Boundary Layer.md  crashless_core.cpp  crashless_core.h  index.html  script.js  styles.css
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
.jules/: bolt.md
CrashlessLLM.StressTests/: CrashlessLLM.StressTests.cs  CrashlessLLM.StressTests.csproj  TestConfig.cs
CrashlessLLM.StressTests/Native/: CrashlessNativeShim.cpp
docs/: ARCHITECTURE.md  GITHUB_UPLOAD.md  X_LAUNCH_THREAD.md  docs.css  index.html
native/: CMakeLists.txt  crashless_core.cpp  crashless_core.h
samples/CrashlessLLM.AvaloniaDemo/: App.axaml  App.axaml.cs  CrashlessLLM.AvaloniaDemo.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
samples/CrashlessLLM.ConsoleSmoke/: CrashlessLLM.ConsoleSmoke.csproj  Program.cs
scripts/: publish-nuget.sh
src/CrashlessLLM/: CrashlessLLM.cs  CrashlessLLM.csproj
